[package]
name = "s3-queue-commit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
env_logger = "0.10.0"
futures = "0.3.28"
log = "0.4.18"
object_store = { version = "0.6.1", features = ["aws"] }
rand = "0.8.5"
tokio = { version = "1.28.2", features = ["time", "rt-multi-thread"] }
uuid = { version = "1.3.3", features = ["v4"] }
